chore: Logging tuning

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -25,18 +25,22 @@ http {
         index                   index.html;
 
         client_max_body_size    32m;
+
+        error_page 404 =200     /index.html;
         error_page              500 502 503 504  /50x.html;
         location = /50x.html {
               root              /var/lib/nginx/html;
         }
 
-        # Status reporting for Stackdriver container
-        # location /nginx_status {
-        #     stub_status on;
-        #     access_log off;
-        #     allow 127.0.0.1;
-        #     deny all;
-        # }
+        location = /uptimez {
+            access_log off;
+            try_files '' /index.html =404;
+        }
+
+        location = /healthz {
+            access_log off;
+            return 200;
+        }
 
     }
 
