--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,7 +8,7 @@ ENV NODE_ENV dev
 
 COPY ./package.json /app/package.json
 RUN npm install nodemon -g
-RUN npm install
+RUN npm install --loglevel warn
 
 COPY . /app
 
