--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add --update-cache build-base python git
 WORKDIR /app
 
 COPY ./package.json /app/package.json
-RUN npm install
+RUN npm install --loglevel warn
 
 COPY . /app
 
