--- a/scripts/server-template/templates/secret.yaml
+++ b/scripts/server-template/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "fullname" . }}-basic-auth
+  name: {{ template "name" . }}-basic-auth
   labels:
     app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
