feat: Renamed 'taito o-' to 'taito oper-'

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "commitmsg": "validate-commit-msg",
     "precommit": "npm run lint",
     "prepush": "npm-run-all --parallel lint ci-test-unit",
-    "o-users:local": "echo TODO: add local users to package.json",
-    "o-users:dev": "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
-    "o-users:test": "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
+    "oper-users:local": "echo TODO: add local users to package.json",
+    "oper-users:dev": "echo Basic auth: #username/#password; echo TODO: add dev users to package.json",
+    "oper-users:test": "echo Basic auth: #username/#password; echo TODO: add test users to package.json",
     "contacts-development": "cat PROJECT.md | sed -n -e '/^## Development.*$/,/^#.*$/{ /^## Development.*$/d; /^#.*$/d; p; }'",
     "contacts-maintenance": "cat PROJECT.md | sed -n -e '/^## Maintenance.*$/,/^#.*$/{ /^## Maintenance.*$/d; /^#.*$/d; p; }'",
     "ci-scan": "npm run lint; echo 'TODO sonar.sh start; run sonar scanner; sonar.sh stop ???'",
