--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -52,14 +52,14 @@ steps:
   env:
     - taito_mode=ci
 
-- id: o-install
+- id: install
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
-  args: ['o-install:$BRANCH_NAME']
+  args: ['install:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: ci-release-pre
-  waitFor: ['o-install']
+  waitFor: ['install']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-release-pre:$BRANCH_NAME']
   env:
@@ -67,14 +67,14 @@ steps:
     - commit_sha=$COMMIT_SHA
 
 - id: ci-test-unit
-  waitFor: ['o-install']
+  waitFor: ['install']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-test-unit:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: ci-scan
-  waitFor: ['o-install']
+  waitFor: ['install']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-scan:$BRANCH_NAME']
   env:
@@ -83,7 +83,7 @@ steps:
 # Build artifacts
 
 - id: ci-docs
-  waitFor: ['o-install']
+  waitFor: ['install']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-docs:$BRANCH_NAME']
   env:
@@ -123,10 +123,10 @@ steps:
 
 # Run tests in local environment
 
-- id: o-start:local
+- id: start:local
   waitFor: ['ci-build-client', 'ci-build-server']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
-  args: ['o-start:local']
+  args: ['start:local']
   env:
     - taito_mode=ci
 
@@ -153,24 +153,24 @@ steps:
     - taito_mode=ci
     - COMPOSE_PROJECT_NAME=workspace
 
-- id: ci-stop:local
+- id: stop:local
   waitFor: ['ci-test-api:local', 'ci-test-e2e:local']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
-  args: ['o-stop:local']
+  args: ['stop:local']
   env:
     - taito_mode=ci
 
 # Deploy to target environment
 
 - id: db-deploy
-  waitFor: ['ci-stop:local']
+  waitFor: ['stop:local']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['db-deploy:$BRANCH_NAME']
   env:
     - taito_mode=ci
 
 - id: ci-deploy
-  waitFor: ['ci-stop:local']
+  waitFor: ['stop:local']
   name: 'eu.gcr.io/gcloud-temp1/github-taitounited-taito-cli/cli:latest'
   args: ['ci-deploy:$BRANCH_NAME', '$COMMIT_SHA']
   env:
